--- a/wk1_photoessay_mwcao/index.html
+++ b/wk1_photoessay_mwcao/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Anonymous Club</title>
+        <title>How do you do it?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
