--- a/wk1_photoessay_mwcao/index.html
+++ b/wk1_photoessay_mwcao/index.html
@@ -18,7 +18,7 @@
           <section>
             <figure>
               <div class="images">
-                  <a href="http://posturemag.com/online/posturepride/" target="_blank"><img src="img/posture1.jpg" alt="Yunique"/></a>
+                  <a href="https://www.youtube.com/watch?list=PLhB_PdpxdgcHVbDfrP2ZMJUhUku6FFBqk&v=An3Q2Y6AVcg" target="_blank"><img src="img/posture1.jpg" alt="Yunique"/></a>
               </div>
               <figcaption>
                 <p class="caption-head">Yunique</p>
@@ -30,7 +30,7 @@
           <section>
             <figure>
               <div class="images">
-                  <a href="http://posturemag.com/online/posturepride/" target="_blank"><img src="img/posture2.jpg" alt="Xeno"/></a>
+                  <a href="https://www.youtube.com/watch?v=5O6LYvEdFlQ&index=4&list=PLhB_PdpxdgcHVbDfrP2ZMJUhUku6FFBqk" target="_blank"><img src="img/posture2.jpg" alt="Xeno"/></a>
               </div>
               <figcaption>
                 <p class="caption-head">Xeno</p>
@@ -42,7 +42,7 @@
           <section>
             <figure>
               <div class="images">
-                  <a href="http://posturemag.com/online/posturepride/" target="_blank"><img src="img/posture3.jpg" alt="Antony"/></a>
+                  <a href="https://www.youtube.com/watch?v=jy_b7KL5JXA&index=2&list=PLhB_PdpxdgcHVbDfrP2ZMJUhUku6FFBqk" target="_blank"><img src="img/posture3.jpg" alt="Antony"/></a>
               </div>
               <figcaption>
                 <p class="caption-head">Antonoy</p>
